# AgriKoli-AI

./: .gitignore  HF_README.md  README.md  main.py  pyproject.toml
data/: agrikoli_training_dataset.json
notebooks/: agri-koli-llama-3-2-3b.ipynb  agrikoli_finetune_phi2.ipynb
scripts/: generate_dataset.py  train_phi2.py
